--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="profile">
+            <div class="photo"></div>
+            <h2 class="heading heading-light">
+
+            </h2>
+        </div>
+        <div class="resume"></div>
+    </div>
+
 
 </body>
 
