Can't use fontawesome
I don't know how to use fontawesome. Please help me with this!

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="CV.css" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -18,12 +20,49 @@
                     Profile
                 </h2>
                 <p class="profile-text">
-                    Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced
-                    with
-                    all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
-                    languages including JavaScript, SQL, and C. Stng background in project management and customer
+                    Hello! I’m Alex Voloshenyuk. Junior Web Developer specializing in front end development. I just
+                    ended specialized courses called “front – end” in Web Academy School.
+                    <br>Experienced:
+                    I learned
+                    language JavaScript. Strong background in customer
                     relations.
+
                 </p>
+                <div class="contacts">
+                    <div class="contacts-item">
+                        <h3 class="contacts-title">
+                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
+
+                            Phone
+                        </h3>
+                        <a href="tel:0830003030" class="contacts-text">0830003030</a>
+                    </div>
+                    <div class="contacts-item">
+                        <h3 class="contacts-title">
+                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
+
+                            Email
+                        </h3>
+                        <a href="mailto:alex_alex@ukr.net" class="contacts-text">alex_alex@ukr.net</a>
+                    </div>
+                    <div class="contacts-item">
+                        <h3 class="contacts-title">
+                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
+
+                            Web
+                        </h3>
+                        <a href="web:http://www.alex3333444.com" class="contacts-text">www.alex3333444.com</a>
+                    </div>
+                    <div class="contacts-item">
+                        <h3 class="contacts-title">
+                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
+
+                            Home
+                        </h3>
+                        <address class="contacts-text">Kyiv, Ukraine <br>holosiivska 23</address>
+
+                    </div>
+                </div>
             </div>
         </div>
         <div class="resume"></div>
