--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="CV.css" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/02933d5bf3.js"></script>
 
 </head>
 
@@ -31,32 +31,28 @@
                 <div class="contacts">
                     <div class="contacts-item">
                         <h3 class="contacts-title">
-                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
-
+                            <i class="fas fa-mobile-alt"></i>
                             Phone
                         </h3>
                         <a href="tel:0830003030" class="contacts-text">0830003030</a>
                     </div>
                     <div class="contacts-item">
                         <h3 class="contacts-title">
-                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
-
+                            <i class="fas fa-paper-plane"></i>
                             Email
                         </h3>
                         <a href="mailto:alex_alex@ukr.net" class="contacts-text">alex_alex@ukr.net</a>
                     </div>
                     <div class="contacts-item">
                         <h3 class="contacts-title">
-                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
-
+                            <i class="fas fa-globe"></i>
                             Web
                         </h3>
                         <a href="web:http://www.alex3333444.com" class="contacts-text">www.alex3333444.com</a>
                     </div>
                     <div class="contacts-item">
                         <h3 class="contacts-title">
-                            <!-- не понятно как подключить fontawesome для того что вствить иконки -->
-
+                            <i class="fas fa-map-marker-alt"></i>
                             Home
                         </h3>
                         <address class="contacts-text">Kyiv, Ukraine <br>holosiivska 23</address>
