--- a/index.html
+++ b/index.html
@@ -55,8 +55,23 @@
                             <i class="fas fa-map-marker-alt"></i>
                             Home
                         </h3>
-                        <address class="contacts-text">Kyiv, Ukraine <br>holosiivska 23</address>
+                        <address class="contacts-text">Kyiv, Ukraine <br>Holosiivska 23</address>
 
+                    </div>
+                </div>
+                <h2 class="heading heading-light">Languages</h2>
+                <div class="languages">
+                    <div class="language"><span class="language-text">Ukrainian</span><strong
+                            class="languages-per">100%</strong>
+                    </div>
+                    <div class="language"><span class="language-text">Russian</span><strong
+                            class="languages-per">100%</strong>
+                    </div>
+                    <div class="language"><span class="language-text">English</span><strong
+                            class="languages-per">65%</strong>
+                    </div>
+                    <div class="language"><span class="language-text">Polish</span><strong
+                            class="languages-per">35%</strong>
                     </div>
                 </div>
             </div>
