Start doing the right column of my CV

--- a/index.html
+++ b/index.html
@@ -76,7 +76,25 @@
                 </div>
             </div>
         </div>
-        <div class="resume"></div>
+        <div class="resume">
+            <div class="resumr-wrap">
+                <div class="logo">
+                    <div class="logo-lines logo-lines_left">
+                        <div class="span logo-line"></div>
+                        <div class="span logo-line"></div>
+                        <div class="span logo-line"></div>
+                    </div>
+                    <div class="logo-img">
+                        A/V
+                    </div>
+                    <div class="logo-lines logo-lines_right">
+                        <div class="span logo-line"></div>
+                        <div class="span logo-line"></div>
+                        <div class="span logo-line"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
