--- a/index.html
+++ b/index.html
@@ -80,20 +80,29 @@
             <div class="resumr-wrap">
                 <div class="logo">
                     <div class="logo-lines logo-lines_left">
-                        <div class="span logo-line"></div>
-                        <div class="span logo-line"></div>
-                        <div class="span logo-line"></div>
+                        <span class="logo-line"></span>
+                        <span class="logo-line"></span>
+                        <span class="logo-line"></span>
                     </div>
                     <div class="logo-img">
                         A/V
                     </div>
                     <div class="logo-lines logo-lines_right">
-                        <div class="span logo-line"></div>
-                        <div class="span logo-line"></div>
-                        <div class="span logo-line"></div>
+                        <span class="logo-line"></span>
+                        <span class="logo-line"></span>
+                        <span class="logo-line"></span>
                     </div>
                 </div>
-
+                <div class="about">
+                    <h1 class="name"></h1>
+                    <span class="position">Web developer</span>
+                    <address>Holosiivska Street, Kyiv, Ukraine</address>
+                    <div class="about-contacts">
+                        <a href="#"><b>t</b>: 0830003030</a>|
+                        <a href="#"><b>e</b>: alex_alex@ukr.net</a>|
+                        <a href="#"><b>w</b>: www.alex3333444.com</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
