finished first block

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                     </div>
                 </div>
                 <div class="about">
-                    <h1 class="name"></h1>
+                    <h1 class="name">Alex Voloshenyuk</h1>
                     <span class="position">Web developer</span>
-                    <address>Holosiivska Street, Kyiv, Ukraine</address>
+                    <address class="about-address">Holosiivska Street, Kyiv, Ukraine</address>
                     <div class="about-contacts">
-                        <a href="#"><b>t</b>: 0830003030</a>|
-                        <a href="#"><b>e</b>: alex_alex@ukr.net</a>|
-                        <a href="#"><b>w</b>: www.alex3333444.com</a>
+                        <a class="about-contacts_link" href="#"><b>t</b>: 0830003030</a>|
+                        <a class="about-contacts_link" href="#"><b>e</b>: alex_alex@ukr.net</a>|
+                        <a class="about-contacts_link" href="#"><b>w</b>: www.alex3333444.com</a>
                     </div>
                 </div>
             </div>
