--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
                         <a class="about-contacts_link" href="#"><b>w</b>: www.alex3333444.com</a>
                     </div>
                 </div>
+                <div class="experience">
+                    <h2 class="heading heading_dark">
+                        EXPERIENCE
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
