--- a/index.html
+++ b/index.html
@@ -107,6 +107,43 @@
                     <h2 class="heading heading_dark">
                         EXPERIENCE
                     </h2>
+                    <ul class="list">
+                        <li class="list-item">
+                            <h4 class="list-item_title">Hexogan Web Development Company</h4>
+                            <span class="list-item_date">Jan 2016 - 0ct 2016</span>
+                            <p class="list-item_text">Fleeing from the Cylon tyranny the last Battlestar – Galactica -
+                                leads a rag-tag fugitive fleet on a lonely quest - a shining planet known as Earth?
+                                Texas tea.</p>
+                        </li>
+                        <li class="list-item">
+                            <h4 class="list-item_title">Hexogan Web Development Company</h4>
+                            <span class="list-item_date">Jan 2016 - 0ct 2016</span>
+                            <p class="list-item_text">Fleeing from the Cylon tyranny the last Battlestar – Galactica -
+                                leads a rag-tag fugitive fleet on a lonely quest - a shining planet known as Earth?
+                                Texas tea.</p>
+                        </li>
+                        <li class="list-item">
+                            <h4 class="list-item_title">Hexogan Web Development Company</h4>
+                            <span class="list-item_date">Jan 2016 - 0ct 2016</span>
+                            <p class="list-item_text">Fleeing from the Cylon tyranny the last Battlestar – Galactica -
+                                leads a rag-tag fugitive fleet on a lonely quest - a shining planet known as Earth?
+                                Texas tea.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="education">
+                    <h2 class="heading heading_dark">
+                        education
+                    </h2>
+                    <ul class="list">
+                        <li class="list-item">
+                            <h4 class="list-item_title">Hexogan Web Development Company</h4>
+                            <span class="list-item_date">Jan 2016 - 0ct 2016</span>
+                            <p class="list-item_text">Fleeing from the Cylon tyranny the last Battlestar – Galactica -
+                                leads a rag-tag fugitive fleet on a lonely quest - a shining planet known as Earth?
+                                Texas tea.</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
