--- a/index.html
+++ b/index.html
@@ -136,12 +136,31 @@
                         education
                     </h2>
                     <ul class="list">
-                        <li class="list-item">
+                        <li class="list-item list-item_none-brder">
                             <h4 class="list-item_title">Hexogan Web Development Company</h4>
                             <span class="list-item_date">Jan 2016 - 0ct 2016</span>
                             <p class="list-item_text">Fleeing from the Cylon tyranny the last Battlestar – Galactica -
                                 leads a rag-tag fugitive fleet on a lonely quest - a shining planet known as Earth?
                                 Texas tea.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <h2 class="heading heading_dark heading_skills">
+                        skills
+                    </h2>
+                    <ul class="skills-list">
+                        <li class="skills-list_item">JavaScript
+                            <div class="level level-90"></div>
+                        </li>
+                        <li class="skills-list_item">HTML
+                            <div class="level level-80"></div>
+                        </li>
+                        <li class="skills-list_item">CSS
+                            <div class="level level-70"></div>
+                        </li>
+                        <li class="skills-list_item">Photoshop
+                            <div class="level level-60"></div>
                         </li>
                     </ul>
                 </div>
