start doing mobile version of CV

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="resume">
-            <div class="resumr-wrap">
+            <div class="resume-wrap">
                 <div class="logo">
                     <div class="logo-lines logo-lines_left">
                         <span class="logo-line"></span>
